crates/k-rust/tests/snapshots/inner_rules__as_pattern_at_an_argument_position_with_a_cast.snap
---
source: crates/k-rust/tests/inner_rules.rs
description: "K definition:\n\nmodule MAIN\n  syntax Int ::= r\"[0-9]+\" [token]\n  syntax Exp ::= Int | bar(Exp) [symbol(bar)]\n  syntax KItem ::= foo(Int) [symbol(foo)]\n  syntax List ::= ListItem(KItem) [symbol(ListItem)]\n                | List List [symbol(_List_)]\n                | \".List\" [symbol(.List)]\n  syntax KCell ::= \"<k>\" K \"</k>\" [cell]\n  rule foo(0 #as V:Int)\nendmodule\n"
---
[
    SentenceSummary {
        kind: "rule",
        body: "foo(#token(\"0\",\"Int\") #as #SemanticCastToInt(V))",
        requires: "#token(\"true\",\"Bool\")",
        ensures: Some(
            "#token(\"true\",\"Bool\")",
        ),
        label: None,
    },
]
