crates/k-rust/tests/snapshots/inner_rules__as_pattern_inside_a_cell.snap
---
source: crates/k-rust/tests/inner_rules.rs
description: "K definition:\n\nmodule MAIN\n  syntax Int ::= r\"[0-9]+\" [token]\n  syntax KItem ::= foo(Int) [symbol(foo)]\n  syntax KCell ::= \"<k>\" K \"</k>\" [cell]\n  rule <k> foo(0) #as V </k>\nendmodule\n"
---
[
    SentenceSummary {
        kind: "rule",
        body: "`<k>_</k>_MAIN_KCell_K`(#noDots(.KList),foo(#token(\"0\",\"Int\")) #as #SemanticCastToK(V),#noDots(.KList))",
        requires: "#token(\"true\",\"Bool\")",
        ensures: Some(
            "#token(\"true\",\"Bool\")",
        ),
        label: None,
    },
]
